--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 This is the list of features to implement:
 
 * Stage 0
-  * [ ] Program options and parameters
+  * [x] Program options and parameters
   * [ ] The input file
   * [ ] Write the ppm output file
   * [ ] Handle a basic camera
